Switched HttpURLConnection and Notification